tests/test-dirs/upstream-typing-recovery/original-tests/apply_non_function.ml
(* TEST
   flags = " -typing-recovery";
   ocamlc_byte_exit_status = "2";
   setup-ocamlc.byte-build-env;
   compile_only = "true";
   ocamlc.byte;
   check-ocamlc.byte-output;
*)

let x = 42

let _ = x 1

let y = 10

let _ = y 2
